--- a/tugas17.html
+++ b/tugas17.html
@@ -234,7 +234,7 @@
         </div>
         <div class="col-md-4">
           <div class="card-produk">
-            <img src="paket ms.glow.jpg" class="card-img-top" alt="Glowing">
+            <img src="glow.jpg" class="card-img-top" alt="Glowing">
             <div class="card-body text-center p-4">
               <h5>Paket Glowing</h5>
               <p class="harga-lama">Rp 300.000</p>
