--- a/tugas17.html
+++ b/tugas17.html
@@ -599,7 +599,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img src="https://images.unsplash.com/photo-1570194066988-2c2e7d2d8c9f?w=800" class="img-fluid rounded-3 shadow" alt="About G2G">
+                    <img src="g2g.jpg" class="img-fluid rounded-3 shadow" alt="About G2G">
                 </div>
                 <div class="col-lg-6 mt-5 mt-lg-0">
                     <h2 class="section-title">Tentang G2G Beauty</h2>
