--- a/tugas17.html
+++ b/tugas17.html
@@ -521,7 +521,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">G2G</a>
+            <a class="navbar-brand" href="#">PRODUK SKINCARE,MS.GLOW DAN G2G</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -665,4 +665,5 @@
     <!-- Font Awesome untuk icon sosial (opsional) -->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
+
 </html>
