--- a/tugas17.html
+++ b/tugas17.html
@@ -521,7 +521,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">PRODUK SKINCARE,MS.GLOW DAN G2G</a>
+            <a class="navbar-brand" href="#">SKINCARE,MS.GLOW DAN G2G</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -667,3 +667,4 @@
 </body>
 
 </html>
+
